sd/plugins/garage/additional/service-garage-ui.yaml
# Source: garage/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: garage-ui
  labels:
    app: garage-ui
  annotations:
    tailscale.com/proxy-group: tailscale-ingress
spec:
  type: LoadBalancer
  loadBalancerClass: tailscale
  ports:
    - port: 3909
      targetPort: 3909
      protocol: TCP
      name: s3-ui
  selector:
    app: garage-ui
